# pq-priv

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.e2e  Dockerfile.e2e-simple  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STATUS_REPORT.md  README.md  RUST_TOOLCHAIN.txt  SECURITY.md  SECURITY_AUDIT.md  about.hjson  audit.txt  audit_result.json  audit_result.txt  audit_summary.txt  deny.toml  deny.txt  grep_risks.txt  phase2_analysis.txt  phase2_summary.md  rocksdb_tree.txt  rust-toolchain.toml  test-results.txt
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  crypto-release-guard.yml  release.yml
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/consensus/tests/: privacy_block.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/benches/: crypto_verify.rs  range_proof_perf.rs
crates/crypto/src/: audit_crypto.rs  hybrid_kem.rs  lib.rs
crates/crypto/stark/: CONSTANT_TIME_AUDIT.md  Cargo.toml
crates/crypto/stark/benches/: stark_perf.rs
crates/crypto/stark/src/: arith.rs  batch.rs  field.rs  fri.rs  lib.rs  merkle.rs  merkle_tree.rs  params.rs  poseidon2.rs  prove.rs  traits.rs  transcript.rs  verify.rs
crates/crypto/stark/tests/: security.rs  soundness.rs
crates/crypto/tests/: fuzz.rs  integration.rs  integration.rs.disabled  range_proof.rs
crates/node/: Cargo.toml
crates/node/benches/: tx_v2_perf.rs
crates/node/src/: cfg.rs  lib.rs  main.rs  mempool.rs  metrics.rs  relay.rs  rpc.rs  state.rs  storage_metrics_task.rs  sync.rs  tasks.rs
crates/node/tests/: integration.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: codec.rs  config.rs  error.rs  handshake.rs  inventory.rs  lib.rs  peer.rs  peerman.rs  router.rs  types.rs
crates/pow/: Cargo.toml
crates/pow/src/: lib.rs
crates/rocksdb_stub/: Cargo.toml
crates/rocksdb_stub/src/: checkpoint.rs  lib.rs
crates/spec/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: batch.rs  checkpoint.rs  config.rs  errors.rs  lib.rs  metrics.rs  schema.rs  snapshot.rs  store.rs  utxo_store.rs
crates/storage/tests/: rocksdb_live.rs  snapshot_tests.rs
crates/tx/: Cargo.toml
crates/tx/src/: lib.rs  witness.rs
crates/tx/tests/: confidential_tx.rs  integration.rs
crates/utxo/: Cargo.toml
crates/utxo/src/: lib.rs
crates/utxo/tests/: batch_verify_integration.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: audit.rs  lib.rs  main.rs  stark_prover.rs
docker/: Dockerfile  docker-compose.yml  node_a.toml  node_b.toml
docker/e2e/: .gitignore  Dockerfile  README.md  crypto-test.yml  line.yml  partition.yml  star.yml
docker/e2e/config/: line_a.toml  line_b.toml  line_c.toml  partition_bridge.toml  partition_iso_a.toml  partition_iso_b.toml  star_hub.toml  star_leaf1.toml  star_leaf2.toml  star_leaf3.toml
docs/: PR_CHECKLIST_STATUS.md  ROCKSDB_LIVE_SUMMARY.md  exchange-compliance.md  p2p-scaling-strategy.md  performance-targets.md  privacy.md  regulatory-risk-matrix.md  snapshots.md  sprint9-whitepaper-coverage.md  stark-proving-guide.md
docs/crypto/: TESTING.md  batch-verify.md  dilithium.md  runtime-sizes.md
docs/perf/: crypto-comparison.md  range-proof-performance.md  storage.md  windows-build.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_commitment_balance.rs  fuzz_confidential_tx.rs  fuzz_malformed_proofs.rs  fuzz_range_proof.rs
scripts/: collect-logs.ps1  crypto-e2e-test.ps1  e2e-reporter.sh  e2e-test.ps1  mine-blocks.ps1  populate_db.sh  snapshot-restore-verify.sh  testnet-down.ps1  testnet-down.sh  testnet-up.ps1  testnet-up.sh  write_sha256.py
spec/: FEE_POLICY_V2.md  README.md  blueprint.md  build.md  crypto.md  fork-choice.md  metrics.md  sprint3_plan.md  sprint3_verification.md  storage.md
