[workspace]
members = [
    "crates/node",
    "crates/crypto",
    "crates/crypto/stark",
    "crates/spec",
    "crates/codec",
    "crates/pow",
    "crates/wallet",
    "crates/tx",
    "crates/consensus",
    "crates/utxo",
    "crates/storage",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0 OR MIT"
