[package]
name = "consensus"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
blake3 = "1.5"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tx = { path = "../tx", version = "0.1.0" }
codec = { path = "../codec", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }
