[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
license.workspace = true
build = "build.rs"

[features]
# AUDITOR NOTE: default features MUST NOT include dev_stub_signing
# dev_stub_signing is for development/testing only (non-PQC Ed25519)
default = []
# Enable Ed25519 as a development stub for testing (NOT for production)
# This feature will cause a compile error if enabled in release builds
dev_stub_signing = []

[dependencies]
blake3 = "1.5"
ciborium = "0.2"
hex = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha3 = "0.10"
thiserror = "1.0"
ed25519-dalek = "2.1"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

[dev-dependencies]
serde_json = "1.0"
