[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
license.workspace = true
build = "build.rs"

[features]
# SECURITY: The 'default' feature set is empty (quantum-safe only).
# The stub signing feature is ONLY for development/testing (uses non-PQC Ed25519).
default = []
# Enable Ed25519 as a development stub for testing (NOT for production)
# This feature will cause a compile error if enabled in release builds
dev_stub_signing = ["ed25519-dalek"]

[dependencies]
blake3 = "1.5"
ciborium = "0.2"
hex = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha3 = "0.10"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", optional = true }
# NIST standardized ML-DSA (formerly Dilithium) - maintained replacement for pqcrypto-dilithium
pqcrypto-mldsa = "0.1.2"
pqcrypto-traits = "0.3"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

[dev-dependencies]
serde_json = "1.0"
