[package]
name = "node"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
devnet = []

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
codec = { path = "../codec", version = "0.1.0" }
consensus = { path = "../consensus", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }
pow = { path = "../pow", version = "0.1.0" }
tx = { path = "../tx", version = "0.1.0" }
utxo = { path = "../utxo", version = "0.1.0" }
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
p2p = { path = "../p2p", version = "0.1.0" }
storage = { path = "../storage", version = "0.1.0" }
parking_lot = "0.12"
axum = { version = "0.7.9", default-features = false, features = ["http1", "tokio", "macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
tower = { version = "0.4", features = ["util", "make"] }
anyhow = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
