[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.6"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
codec = { path = "../codec" }
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
