[package]
name = "storage"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["metrics"]
metrics = []

[dependencies]
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "zstd", "multi-threaded-cf"] }
codec = { path = "../codec", version = "0.1.0" }
consensus = { path = "../consensus", version = "0.1.0" }
utxo = { path = "../utxo", version = "0.1.0" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
tar = "0.4"
flate2 = "1.0"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
crypto = { path = "../crypto", version = "0.1.0" }
pow = { path = "../pow", version = "0.1.0" }
tx = { path = "../tx", version = "0.1.0" }
