[package]
name = "tx"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
dev_stub_signing = ["crypto/dev_stub_signing"]

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = { version = "3.4", features = ["macros"] }
thiserror = "1.0"
codec = { path = "../codec", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }
crypto-stark = { path = "../crypto/stark", version = "0.1.0" }
