[package]
name = "utxo"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "UTXO set management for PQ-PRIV"
authors = ["PQ-PRIV Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
codec = { path = "../codec", version = "0.1.0" }
tx = { path = "../tx", version = "0.1.0" }
consensus = { path = "../consensus", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }

[dev-dependencies]
rand = "0.9"
