[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crypto = { path = "../crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tx = { path = "../tx" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hex = "0.4"
