[package]
name = "wallet"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crypto = { path = "../crypto", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tx = { path = "../tx", version = "0.1.0" }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hex = "0.4"
